# FBMediaPlayer

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  confline  filestoopen  ignorelibleaks  remakesourcelist
FBMediaPlayer/: flagsandlibs  sources
FBMediaPlayer/app/: Makefile.am  Makefile.in
FBMediaPlayer/resources/man/: fbmediaplayer.1
FBMediaPlayer/src/: callbacks.cpp  callbacks.h  debug.h  globals.cpp  globals.h  info.cpp  info.h  main.cpp  maingui.cpp  maingui.h  movies.cpp  movies.h  moviesgui.cpp  moviesgui.h  music.cpp  music.h  prefs.cpp  prefs.h  tv.cpp  tv.h
