#
#
AC_INIT([FBMediaPlayer],[0.2.1],[PROJ],[FBMediaPlayer])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_CONFIG_MACRO_DIR([./localm4s])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CURSESTOOLKIT_MODULES="cursestoolkit >= 2.0.1"
PKG_CHECK_MODULES(CURSESTOOLKIT, $CURSESTOOLKIT_MODULES)
AC_SUBST(CURSESTOOLKIT_CFLAGS)
AC_SUBST(CURSESTOOLKIT_LIBS)

IMAGEMAGICK_MODULES="Magick++ >= 7.0.0"
PKG_CHECK_MODULES(IMAGEMAGICK,$IMAGEMAGICK_MODULES)
AC_SUBST(IMAGEMAGICK_CFLAGS)
AC_SUBST(IMAGEMAGICK_LIBS)

#BOOST_REQUIRE([1.63.0])
#BOOST_FILESYSTEM([mt])
AX_BOOST_BASE([1.48],, [AC_MSG_ERROR([libfoo needs Boost, but it was not found in your system])])
AX_BOOST_SYSTEM
AX_BOOST_FILESYSTEM

AC_OUTPUT(Makefile FBMediaPlayer/app/Makefile)

